force-app/main/default/objects/Case_Origin__mdt/Case_Origin__mdt.object-meta.xml
<CustomObject>
    <description>Update the case origins and owner ids for the web to case and Chats.for LATAM</description>
    <label>Case Origin</label>
    <pluralLabel>Case Origins</pluralLabel>
</CustomObject>