force-app/main/default/objects/Case_Origin__mdt/fields/Chat_Transcript_Language__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_Language__c</fullName>
    <description>Language check for Chat Transcript language and Web to case portal language.</description>
    <label>Language</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>