force-app/main/default/objects/Case_Origin__mdt/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <label>Owner Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>