force-app/main/default/objects/Case_Origin__mdt/fields/ServiceLineIC__c.field-meta.xml
<CustomField>
    <fullName>ServiceLineIC__c</fullName>
    <description>this field is used to map the ServiceNow (Iron Cloud, Alfresco) origin and ownerID. 
Enable Web to Case SFDC/SNOW Integration #17338</description>
    <label>ServiceLineIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>